--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h2> Brittany's Portfolio</h2>
+        <h3>Under Construction</h3>
 
+    </header>
+
+    <main>
+        <p> My idea for the final project website is a portfolio to display my different video game projects that I make. For example, there will be different pages with information about me and my creations and different examples of my work to send to companies that I am applying to.</p>
+        <ul>
+            <li>About Me</li>
+            <li>Code</li>
+            <li>My Maps</li>
+            <li>More information</li>
+        </ul>
+    </main>
+
+    <footer>
+
+
+    </footer>
+    
+</body>
+</html>
